# SFML_test

./: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  ops  readme.md  root  version
.github/workflows/: c-cpp.yml
doc/html/: _al_resource_8hpp.html  _al_resource_8hpp_source.html  _audio_2_export_8hpp.html  _audio_2_export_8hpp_source.html  _audio_8hpp.html  _audio_8hpp_source.html  _blend_mode_8hpp.html  _blend_mode_8hpp.js  _blend_mode_8hpp_source.html  _buttons_8cpp.html  _buttons_8h.html  _buttons_8h.js  _buttons_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _circle_shape_8hpp.html  _circle_shape_8hpp_source.html  _client_8cpp.html  _client_8cpp.js  _clipboard_8hpp.html  _clipboard_8hpp_source.html  _clock_8hpp.html  _clock_8hpp_source.html  _color_8hpp.html  _color_8hpp_source.html  _config_8hpp.html  _config_8hpp.js  _config_8hpp_source.html  _context_8hpp.html  _context_8hpp.js  _context_8hpp_source.html  _context_settings_8hpp.html  _context_settings_8hpp_source.html  _convex_shape_8hpp.html  _convex_shape_8hpp_source.html  _cursor_8hpp.html  _cursor_8hpp_source.html  _drawable_8hpp.html  _drawable_8hpp_source.html  (+2329 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+128 more)
doc/latex/: md_readme.tex  refman.tex
docker/: Dockerfile
lib/: Buttons.cpp  Buttons.h  Text.cpp  Text.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/tests/: CMakeLists.txt  basic_check.cpp  font_check.cpp  sfml_check.cpp
